@@ -22,24 +22,23 @@ public class Roguelike_CopperBow : GlobalItem {
 	}
 	public override bool Shoot(Item item, Player player, EntitySource_ItemUse_WithAmmo source, Vector2 position, Vector2 velocity, int type, int damage, float knockback) {
 		int Counter = player.GetModPlayer<Roguelike_CopperBow_ModPlayer>().CopperBow_Counter;
+		Projectile projectile;
 		if (Counter >= 90) {
 			int amount = 8;
 			if (Counter == 150) {
 				amount += 15;
 			}
 			for (int i = 0; i < amount; i++) {
-				var projectile = Projectile.NewProjectileDirect(source, position, velocity.Vector2RotateByRandom(30) * Main.rand.NextFloat(.7f, 1f), ProjectileID.ThunderSpearShot, (int)(damage * 1.25f), knockback, player.whoAmI);
+				projectile = Projectile.NewProjectileDirect(source, position, velocity.Vector2RotateByRandom(30) * Main.rand.NextFloat(.7f, 1f), ProjectileID.ThunderSpearShot, (int)(damage * 1.25f), knockback, player.whoAmI);
 				projectile.DamageType = DamageClass.Ranged;
 				projectile.extraUpdates = 2;
 				projectile.alpha -= 1020;
 			}
 		}
-		if (item.type == ItemID.CopperBow) {
-			var projectile = Projectile.NewProjectileDirect(source, position, velocity, ProjectileID.ThunderSpearShot, (int)(damage * 1.25f), knockback, player.whoAmI);
-			projectile.DamageType = DamageClass.Ranged;
-			projectile.extraUpdates = 2;
-			projectile.alpha -= 1020;
-		}
+		projectile = Projectile.NewProjectileDirect(source, position, velocity, ProjectileID.ThunderSpearShot, (int)(damage * 1.25f), knockback, player.whoAmI);
+		projectile.DamageType = DamageClass.Ranged;
+		projectile.extraUpdates = 2;
+		projectile.alpha -= 1020;
 		player.GetModPlayer<Roguelike_CopperBow_ModPlayer>().CopperBow_Counter = -player.itemAnimationMax;
 		return base.Shoot(item, player, source, position, velocity, type, damage, knockback);
 	}
