@@ -1,7 +1,7 @@
 1/ Make world generation process much more easy to work with.
 2/ Work on more Trial NPC and Trial Projectile
 3/ Work on debuff and buff sprite and many minssing sprite in the mod.
-4/ Remove connection between spoil and lootbox. (connect with task 7)
+4/ Remove connection between spoil and lootbox.
 5/ Work on localization "TODO"
 6/ Added in Source for AddPStats method in PlayerStatsHandle and implement it to most system and item within the mod
 7/ Refactor User info tablet
@@ -28,12 +28,3 @@
 - Gold : Midas theme focus
 - Platinum : ???
 16/ Implement a threadhold that need to be full fill if player want to use intro attack and gain outro buff.
-17/ Work on a in game text coord editor
-- The editor is meant for precise placement of Mod Object for structure or precise coord for portal placement.
-- The editor will required a UI for selecting mode, the following mode are to be included:
-+ Focus area mode
-Allow user to focus onto a structure
-+ Marker mode
-Allow user to mark position.
-+ Save mode
-Upon press, generate a text file base on marker.
